--- a/css/documentation.css
+++ b/css/documentation.css
@@ -1278,7 +1278,7 @@ span.bash-output {
 }
 
 .sidebar-module .arrow-btn {
- background-image: url(/shared/images/expand-arrows.png);
+ background-image: url(/images/expand-arrows.png);
  background-repeat: no-repeat;
  background-position: -3px -3px;
  width: 13px;
@@ -1353,17 +1353,17 @@ li.api-status img {
   }
 
   #searchfield {
-    background-image: url(/shared/images/search@2x.png);
+    background-image: url(/images/search@2x.png);
     background-size: 13px 13px;
   }
 
   .cancel-search {
-    background-image: url(/shared/images/cancel@2x.png);
+    background-image: url(/images/cancel@2x.png);
     background-size: 14px 14px;
   }
 
   .sidebar-module .arrow-btn {
-    background-image: url(/shared/images/expand-arrows@2x.png);
+    background-image: url(/images/expand-arrows@2x.png);
     background-size: 73px 80px;
   }
 
