--- a/layouts/_footer.html
+++ b/layouts/_footer.html
@@ -18,4 +18,4 @@
 		</div>
 
   </div><!-- /#footer -->
-  <script src="/js/retina.js" type="text/javascript"></script>
+  <script src="/developer/assets/js/retina.js" type="text/javascript"></script>
