--- a/layouts/_head.html
+++ b/layouts/_head.html
@@ -6,11 +6,11 @@
   <meta http-equiv="imagetoolbar" content="false" />
   <meta name="MSSmartTagsPreventParsing" content="true" />
   <title><%= @item[:title] %></title>
-  <link href="/css/reset.css" rel="stylesheet" type="text/css" />
-  <link href="/css/960.css" rel="stylesheet" type="text/css" />
-  <link href="/css/uv_active4d.css" rel="stylesheet" type="text/css" />
-  <link href="/css/documentation.css" media="screen" rel="stylesheet" type="text/css">
-  <link href="/css/pygments.css" media="screen" rel="stylesheet" type="text/css">
-  <script src="/js/jquery.js" type="text/javascript"></script>
-  <script src="/js/documentation.js" type="text/javascript"></script>
+  <link href="/developer/assets/css/reset.css" rel="stylesheet" type="text/css" />
+  <link href="/developer/assets/css/960.css" rel="stylesheet" type="text/css" />
+  <link href="/developer/assets/css/uv_active4d.css" rel="stylesheet" type="text/css" />
+  <link href="/developer/assets/css/documentation.css" media="screen" rel="stylesheet" type="text/css">
+  <link href="/developer/assets/css/pygments.css" media="screen" rel="stylesheet" type="text/css">
+  <script src="/developer/assets/js/jquery.js" type="text/javascript"></script>
+  <script src="/developer/assets/js/documentation.js" type="text/javascript"></script>
 </head>
