--- a/layouts/_header.html
+++ b/layouts/_header.html
@@ -1,10 +1,10 @@
 <div id="header-wrapper">
   <div id="header">
     <div>
-      <a class="logo" href="/">RoQua Developer</a>
+      <a class="logo" href="/developer/">RoQua Developer</a>
       <ul class="nav">
-        <li><a href="/" class="nav-overview">Overview</a></li>
-        <li><a href="/v1/" class="nav-api">API v1</a></li>
+        <li><a href="/developer/" class="nav-overview">Overview</a></li>
+        <li><a href="/developer/v1/" class="nav-api">API v1</a></li>
         <li><a href="http://roqua.nl/contact">Support</a></li>
       </ul>
     </div>
