--- a/layouts/_sidebar.html
+++ b/layouts/_sidebar.html
@@ -2,34 +2,34 @@
   <div class="js-toggle-list sidebar-module expandable">
     <ul>
       <li class="js-topic">
-        <h3><a href="#" class="js-expand-btn collapsed arrow-btn" data-proofer-ignore></a><a href="/v1/">Overview</a></h3>
+        <h3><a href="#" class="js-expand-btn collapsed arrow-btn" data-proofer-ignore></a><a href="/developer/v1/">Overview</a></h3>
         <ul class="js-guides">
-          <li><a href="/v1/authentication/">Authentication</a></li>
-          <li><a href="/v1/rider/">Rider</a></li>
+          <li><a href="/developer/v1/authentication/">Authentication</a></li>
+          <li><a href="/developer/v1/rider/">Rider</a></li>
         </ul>
       </li>
       <li class="js-topic">
-        <h3><a href="#" class="js-expand-btn collapsed arrow-btn" data-proofer-ignore></a><a href="/v1/sso/">Single Sign On</a></h3>
+        <h3><a href="#" class="js-expand-btn collapsed arrow-btn" data-proofer-ignore></a><a href="/developer/v1/sso/">Single Sign On</a></h3>
         <ul class="js-guides">
-          <li><a href="/v1/sso/patient_dossier/">Dossiers</a></li>
-          <li><a href="/v1/sso/completing_questionnaires/">Completing questionnaires</a></li>
+          <li><a href="/developer/v1/sso/patient_dossier/">Dossiers</a></li>
+          <li><a href="/developer/v1/sso/completing_questionnaires/">Completing questionnaires</a></li>
         </ul>
       </li>
       <li class="js-topic">
-        <h3><a href="#" class="js-expand-btn collapsed arrow-btn" data-proofer-ignore></a><a href="/v1/rom/">RoQua ROM</a></h3>
+        <h3><a href="#" class="js-expand-btn collapsed arrow-btn" data-proofer-ignore></a><a href="/developer/v1/rom/">RoQua ROM</a></h3>
         <ul class="js-guides">
-          <li><a href="/v1/rom/dossiers/">Dossiers</a></li>
-          <li><a href="/v1/rom/responses/">Responses</a></li>
-          <li><a href="/v1/rom/protocol_subscriptions/">Protocol Subscriptions</a></li>
-          <li><a href="/v1/rom/tokens/">Patient login tokens</a></li>
+          <li><a href="/developer/v1/rom/dossiers/">Dossiers</a></li>
+          <li><a href="/developer/v1/rom/responses/">Responses</a></li>
+          <li><a href="/developer/v1/rom/protocol_subscriptions/">Protocol Subscriptions</a></li>
+          <li><a href="/developer/v1/rom/tokens/">Patient login tokens</a></li>
         </ul>
       </li>
       <li class="js-topic">
-        <h3><a href="#" class="js-expand-btn collapsed arrow-btn" data-proofer-ignore></a><a href="/v1/hl7/">HL7</a></h3>
+        <h3><a href="#" class="js-expand-btn collapsed arrow-btn" data-proofer-ignore></a><a href="/developer/v1/hl7/">HL7</a></h3>
         <ul class="js-guides">
-          <li><a href="/v1/hl7/a19/">A19</a></li>
-          <li><a href="/v1/hl7/oru/">ORU</a></li>
-          <li><a href="/v1/hl7/ports/">Ports</a></li>
+          <li><a href="/developer/v1/hl7/a19/">A19</a></li>
+          <li><a href="/developer/v1/hl7/oru/">ORU</a></li>
+          <li><a href="/developer/v1/hl7/ports/">Ports</a></li>
         </ul>
       </li>
     </ul>
