--- a/layouts/libraries.html
+++ b/layouts/libraries.html
@@ -4,11 +4,11 @@
 	<%= render '_header' %>
 
 	<div class="sub-nav">
-		<h2><a href="/v1/">API</a></h2>
+		<h2><a href="/developer/v1/">API</a></h2>
 
 		<ul>
-      <li><a href="/v1/">Reference</a></li>
-      <li><a href="/libraries/" class="active">Libraries</a></li>
+      <li><a href="/developer/v1/">Reference</a></li>
+      <li><a href="/developer/libraries/" class="active">Libraries</a></li>
 		</ul>
 	</div>
 
