--- a/assets/css/documentation.css
+++ b/assets/css/documentation.css
@@ -214,7 +214,7 @@ a img {
 .rss-subscribe {
   display: block;
   padding: 15px 14px 16px 47px;
-  background: url(/images/feed-icon.png) 10px center no-repeat;
+  background: url(/developer/assets/images/feed-icon.png) 10px center no-repeat;
   color: #444;
   font-size: 13px;
   text-decoration: none;
@@ -248,7 +248,7 @@ a img {
   display: inline-block;
   width: 186px;
   height: 35px;
-  background: url(/images/logo_developer.png) 0 0 no-repeat;
+  background: url(/developer/assets/images/logo_developer.png) 0 0 no-repeat;
   text-indent: -999em;
 }
 
@@ -589,7 +589,7 @@ a .mega-icon {
 
 .sidebar-module h3.disable span {
   padding-left: 20px;
-  background-image: url(../images/active-arrow.png);
+  background-image: url(../developer/assets/images/active-arrow.png);
   background-position: left center;
   background-repeat: no-repeat;
   cursor: default;
@@ -666,19 +666,19 @@ div.sidebar-module ul ul li span {
 }
 
 .api-status .unknown {
-  background-image: url(/images/status-icon-unknown.png);
+  background-image: url(/developer/assets/images/status-icon-unknown.png);
 }
 
 .api-status .good {
-  background-image: url(/images/status-icon-good.png);
+  background-image: url(/developer/assets/images/status-icon-good.png);
 }
 
 .api-status .minor {
-  background-image: url(/images/status-icon-minor.png);
+  background-image: url(/developer/assets/images/status-icon-minor.png);
 }
 
 .api-status .major {
-  background-image: url(/images/status-icon-major.png);
+  background-image: url(/developer/assets/images/status-icon-major.png);
 }
 
 .api-status a:hover {
@@ -1072,7 +1072,7 @@ span.codeline span {
   right: 0px;
   top: 0px;
   text-indent: -9999px;
-  background-image: url(../images/qmark.png);
+  background-image: url(../developer/assets/images/qmark.png);
   background-repeat: no-repeat;
   background-position: 1px 3px;
   max-width: 8px;
@@ -1124,7 +1124,7 @@ span.bash-output {
   position: relative;
 }
 .more-info > h4 {
-  background-image: url('../images/dropdown_sprites.jpg');
+  background-image: url('../developer/assets/images/dropdown_sprites.jpg');
   background-repeat: no-repeat;
   padding: .25em 0 .25em 25px;
   cursor: pointer;
@@ -1278,7 +1278,7 @@ span.bash-output {
 }
 
 .sidebar-module .arrow-btn {
- background-image: url(/images/expand-arrows.png);
+ background-image: url(/developer/assets/images/expand-arrows.png);
  background-repeat: no-repeat;
  background-position: -3px -3px;
  width: 13px;
@@ -1343,52 +1343,52 @@ li.api-status img {
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi) {
 
   #header-wrapper {
-    background-image: url(../images/header@2x.png);
+    background-image: url(../developer/assets/images/header@2x.png);
     background-size: 8px 61px;
   }
 
   #header .logo {
-    background-image: url(/images/logo_developer@2x.png);
+    background-image: url(/developer/assets/images/logo_developer@2x.png);
     background-size: 186px 27px;
   }
 
   #searchfield {
-    background-image: url(/images/search@2x.png);
+    background-image: url(/developer/assets/images/search@2x.png);
     background-size: 13px 13px;
   }
 
   .cancel-search {
-    background-image: url(/images/cancel@2x.png);
+    background-image: url(/developer/assets/images/cancel@2x.png);
     background-size: 14px 14px;
   }
 
   .sidebar-module .arrow-btn {
-    background-image: url(/images/expand-arrows@2x.png);
+    background-image: url(/developer/assets/images/expand-arrows@2x.png);
     background-size: 73px 80px;
   }
 
   .api-status .unknown {
-    background-image: url(/images/status-icon-unknown@2x.png);
+    background-image: url(/developer/assets/images/status-icon-unknown@2x.png);
     background-size: 32px 32px;
   }
 
   .api-status .good {
-    background-image: url(/images/status-icon-good@2x.png);
+    background-image: url(/developer/assets/images/status-icon-good@2x.png);
     background-size: 32px 32px;
   }
 
   .api-status .minor {
-    background-image: url(/images/status-icon-minor@2x.png);
+    background-image: url(/developer/assets/images/status-icon-minor@2x.png);
     background-size: 32px 32px;
   }
 
   .api-status .major {
-    background-image: url(/images/status-icon-major@2x.png);
+    background-image: url(/developer/assets/images/status-icon-major@2x.png);
     background-size: 32px 32px;
   }
 
   .rss-subscribe {
-    background-image: url(/images/feed-icon@2x.png);
+    background-image: url(/developer/assets/images/feed-icon@2x.png);
     background-size: 28px 28px;
   }
 
