--- a/layouts/_sidebar.html
+++ b/layouts/_sidebar.html
@@ -11,8 +11,8 @@
       <li class="js-topic">
         <h3><a href="#" class="js-expand-btn collapsed arrow-btn" data-proofer-ignore></a><a href="/developer/v1/sso/">Single Sign On</a></h3>
         <ul class="js-guides">
-          <li><a href="/developer/v1/sso/patient_dossier/">Dossiers</a></li>
-          <li><a href="/developer/v1/sso/completing_questionnaires/">Completing questionnaires</a></li>
+          <li><a href="/developer/v1/sso/patient_dossier/">Log in as professional</a></li>
+          <li><a href="/developer/v1/sso/completing_questionnaires/">Log in to fill out questionnaires</a></li>
         </ul>
       </li>
       <li class="js-topic">
