--- a/layouts/_footer.html
+++ b/layouts/_footer.html
@@ -8,7 +8,7 @@
 
       <ul class="footer-cell">
         <li><a href="http://roqua.nl/contact">Contact</a></li>
-        <li><a href="https://roqua.zendesk.com/forums">Status</a></li>
+        <li><a href="https://roqua.zendesk.com">Status</a></li>
         <li><a href="https://roqua.zendesk.com/forums/20271351-Announcements">Release News</a></li>
       </ul>
     </div>
