--- a/layouts/_sidebar.html
+++ b/layouts/_sidebar.html
@@ -16,11 +16,18 @@
         </ul>
       </li>
       <li class="js-topic">
-        <h3><a href="#" class="js-expand-btn collapsed arrow-btn" data-proofer-ignore></a><a href="/developer/v1/rom/">RoQua ROM</a></h3>
+        <h3><a href="#" class="js-expand-btn collapsed arrow-btn" data-proofer-ignore></a><a href="/developer/v1/global/">Global data</a></h3>
         <ul class="js-guides">
-          <li><a href="/developer/v1/rom/dossiers/">Dossiers</a></li>
-          <li><a href="/developer/v1/rom/responses/">Responses</a></li>
-          <li><a href="/developer/v1/rom/protocol_subscriptions/">Protocol Subscriptions</a></li>
+          <li><a href="/developer/v1/global/questionnaires/">Questionnaires</a></li>
+          <li><a href="/developer/v1/global/data_exports/">Data Exports</a></li>
+        </ul>
+      </li>
+      <li class="js-topic">
+        <h3><a href="#" class="js-expand-btn collapsed arrow-btn" data-proofer-ignore></a><a href="/developer/v1/dossier/">Dossier-specific data</a></h3>
+        <ul class="js-guides">
+          <li><a href="/developer/v1/dossier/dossiers/">Dossiers</a></li>
+          <li><a href="/developer/v1/dossier/responses/">Responses</a></li>
+          <li><a href="/developer/v1/dossier/protocol_subscriptions/">Protocol Subscriptions</a></li>
         </ul>
       </li>
       <li class="js-topic">
