--- a/layouts/_header.html
+++ b/layouts/_header.html
@@ -4,7 +4,8 @@
       <a class="logo" href="/developer/">RoQua Developer</a>
       <ul class="nav">
         <li><a href="/developer/" class="nav-overview">Overview</a></li>
-        <li><a href="/developer/v1/" class="nav-api">API v1</a></li>
+        <li><a href="/developer/core_v1/" class="nav-core">Core</a></li>
+        <li><a href="/developer/rom_v1/" class="nav-rom">ROM</a></li>
         <li><a href="http://roqua.nl/contact">Support</a></li>
       </ul>
     </div>
