--- a/layouts/libraries.html
+++ b/layouts/libraries.html
@@ -7,7 +7,7 @@
 		<h2><a href="/developer/v1/">API</a></h2>
 
 		<ul>
-      <li><a href="/developer/v1/">Reference</a></li>
+      <li><a href="/developer/rom_v1/">Reference</a></li>
       <li><a href="/developer/libraries/" class="active">Libraries</a></li>
 		</ul>
 	</div>
