--- a/layouts/core_v1.html
+++ b/layouts/core_v1.html
@@ -11,7 +11,7 @@
 
     <ul>
       <li><a href="/developer/core_v1/" class="active">Reference</a></li>
-      <li><a href="/developer/libraries/">Libraries</a></li>
+      <li><a href="/developer/core_v1/libraries/">Libraries</a></li>
     </ul>
   </div>
 
