Prefix header with application name

--- a/layouts/core_v1.html
+++ b/layouts/core_v1.html
@@ -5,6 +5,7 @@
 
   <div class="sub-nav">
     <h2>
+      <strong>Core:</strong>
       <%= @item[:title] %>
       <%= status_label(@item) %>
     </h2>
