--- a/layouts/rom_v1.html
+++ b/layouts/rom_v1.html
@@ -5,6 +5,7 @@
 
 	<div class="sub-nav">
 		<h2>
+      <strong>ROM:</strong>
       <%= @item[:title] %>
       <%= status_label(@item) %>
     </h2>
