Add service health documentation

--- a/layouts/rom_v1.html
+++ b/layouts/rom_v1.html
@@ -41,6 +41,7 @@
           <li class="js-topic">
             <h3><a href="#" class="js-expand-btn collapsed arrow-btn" data-proofer-ignore></a><a href="/developer/rom_v1/global/">Global data</a></h3>
             <ul class="js-guides">
+              <li><a href="/developer/rom_v1/global/service_health/">Service Health</a></li>
               <li><a href="/developer/rom_v1/global/questionnaires/">Questionnaires</a></li>
               <li><a href="/developer/rom_v1/global/data_exports/">Data Exports</a></li>
             </ul>
