--- a/layouts/_header.html
+++ b/layouts/_header.html
@@ -6,6 +6,7 @@
         <li><a href="/developer/" class="nav-overview">Overview</a></li>
         <li><a href="/developer/core_v1/" class="nav-core">Core</a></li>
         <li><a href="/developer/rom_v1/" class="nav-rom">ROM</a></li>
+        <li><a href="/developer/quby_v1/" class="nav-quby">Quby</a></li>
         <li><a href="http://roqua.nl/contact">Support</a></li>
       </ul>
     </div>
