--- a/assets/css/documentation.css
+++ b/assets/css/documentation.css
@@ -340,6 +340,11 @@ a img {
   background-color: #f90;
 }
 
+.sub-nav .status-final {
+  color: #fff;
+  background-color: #5cb85c;
+}
+
 .sub-nav li a:hover {
 	text-decoration: none;
 }
