--- a/layouts/_head.html
+++ b/layouts/_head.html
@@ -14,4 +14,5 @@
   <link href="//cdnjs.cloudflare.com/ajax/libs/octicons/2.1.2/octicons.min.css" media="screen" rel="stylesheet" type="text/css">
   <script src="/developer/assets/js/jquery.js" type="text/javascript"></script>
   <script src="/developer/assets/js/documentation.js" type="text/javascript"></script>
+  <link href="/assets/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
 </head>
