--- a/layouts/default.html
+++ b/layouts/default.html
@@ -11,47 +11,12 @@
 
 
 <body class="rom">
-  <%= render '_header' %>
-
-  <div class="sub-nav">
-    <h2>
-      <strong><%= @section[:title] %></strong>
-      <%= ": #{@item[:title]}" if @item != @section %>
-      <%= status_label(@item) %>
-    </h2>
-  </div>
-
   <div id="wrapper">
     <div class="content">
-      <%= yield %>
+      <p>
+        We hebben al onze documentatie-sites samengevoegd en onder ons eigen domein gehost. U wordt binnen enkele seconden doorgestuurd naar <a href="http://docs.roqua.net<%= @item.identifier %>">http://docs.roqua.net<%= @item.identifier %></a>.
+      </p>
     </div>
-
-    <div id="js-sidebar" class="sidebar-shell">
-
-      <% unless @item.identifier == '/developer/' %>
-        <div class="js-toggle-list sidebar-module expandable">
-          <ul>
-            <% @section.children.sort_by { |topic| topic[:title] || 0 }.sort_by { |topic| topic[:sort] || 0 }.each do |topic| %>
-              <li class="js-topic">
-                <h3><a href="#" class="js-expand-btn collapsed arrow-btn" data-proofer-ignore></a><a href="<%= topic.identifier %>"><%= topic[:title] %></a></h3>
-                <ul class="js-guides">
-                  <% topic.children.sort_by { |guide| guide[:title] || 0 }.sort_by {|guide| guide[:sort] || guide[:title] || 0 }.each do |guide| %>
-                    <li><a href="<%= guide.identifier %>"><%= guide[:title] %></a></li>
-                  <% end %>
-                </ul>
-              </li>
-            <% end %>
-          </ul>
-        </div> <!-- /sidebar-module -->
-      <% end %>
-
-      <div class="sidebar-module notice">
-        <p>This website is a <a href="https://github.com/roqua/developer" target="_blank">public GitHub repository</a>. Please help us by forking the project and adding to it.</p>
-      </div>
-
-    </div><!-- /sidebar-shell -->
   </div><!-- #wrapper -->
-
-  <%= render '_footer' %>
 </body>
 </html>
